--- a/src/components/Talent.astro
+++ b/src/components/Talent.astro
@@ -1,53 +1,83 @@
 ---
+import "@/styles/talent.css";
 import { Image } from "astro:assets";
+import alejandraDuran from "@/images/talent-alejandra-duran.png";
+import arianHoffman from "@/images/talent-arian-hoffman.png";
+import carlosRamirez from "@/images/talent-carlos-ramirez.png";
+import gastonRubio from "@/images/talent-gaston-rubio.png";
+import yareBando from "@/images/talent-yare-bando.png";
 
 interface TeamMember {
 	name: string;
+	image: ImageMetadata;
 	role: string;
 }
 
 const team: TeamMember[] = [
 	{
 		name: "Alejandra Durán",
+		image: alejandraDuran,
 		role: "Directora de Cuentas",
 	},
 	{
 		name: "Yare Bando",
+		image: yareBando,
 		role: "Directora de Planeación",
 	},
 	{
 		name: "Gastón Rubio",
+		image: gastonRubio,
 		role: "Director de Estrategia",
 	},
 	{
 		name: "Arian Hoffman",
+		image: arianHoffman,
 		role: "Director de Arte",
 	},
 	{
 		name: "Carlos Ramírez",
+		image: carlosRamirez,
 		role: "Director de Producción",
 	},
 ];
 ---
 
-<ul>
-	{
-		team.map((teamMember, index) => (
-			<li data-index={index} class="team-member">
-				<span>{teamMember.name}</span>
-			</li>
-		))
-	}
-</ul>
-<div id="selected-image-container">
-	<Image
-		id="selected-image"
-		src="/talent/talent-alejandra-duran.png"
-		alt="Alejandra Durán"
-		width={200}
-		height={200}
-		loading="eager"
-	/>
+<div class="relative px-3 md:px-10">
+	<div
+		class="flex justify-center md:absolute md:top-0 md:left-1/2 md:transform md:-translate-x-1/2 md:-translate-y-1/3 rounded-lg md:shadow-lg pointer-events-none"
+	>
+		<Image
+			id="selected-image"
+			src="/talent/talent-alejandra-duran.png"
+			alt="Alejandra Durán"
+			width={400}
+			height={400}
+			loading="eager"
+		/>
+	</div>
+
+	<ul>
+		{
+			team.map((teamMember, index) => (
+				<li data-index={index} class="team-member flex justify-between">
+					<div class="flex items-center gap-4">
+						<Image
+							src={teamMember.image}
+							alt={teamMember.name}
+							width={50}
+							height={50}
+							class="rounded-sm talent-image"
+							loading="eager"
+						/>
+						{teamMember.name}
+					</div>
+					<div class="flex items-center justify-end text-end">
+						{teamMember.role}
+					</div>
+				</li>
+			))
+		}
+	</ul>
 </div>
 
 <script define:vars={{ team }}>
@@ -81,22 +111,3 @@ const team: TeamMember[] = [
 		});
 	}
 </script>
-
-<style>
-	.team-member {
-		padding: 10px;
-		cursor: pointer;
-		display: flex;
-		align-items: center;
-		transition: background-color 0.3s ease;
-	}
-
-	.team-member.selected {
-		background-color: #f0f8ff;
-	}
-
-	.grid-image {
-		margin-left: 10px;
-		border-radius: 5px;
-	}
-</style>
