--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import alquipop from "@/images/alquipop-logo.svg";
 				>
 			</nav>
 			<div
-				class="flex-1 font-extrabold xl:text-[200px] md:text-[100px] text-[50px] text-lg flex items-center flex-col justify-center"
+				class="flex-1 font-extrabold xl:text-[200px] md:text-[100px] text-[50px] flex items-center flex-col justify-center"
 			>
 				<div class="h-fit">
 					<span class="text-[#ff9300]">ALQUI</span>POP
@@ -55,15 +55,53 @@ import alquipop from "@/images/alquipop-logo.svg";
 			</div>
 			<div class="pb-10 w-full flex justify-center">
 				<div
-					class="max-w-lg text-center text-gray-600 text-xs md:text-md lg:text-xl"
+					class="max-w-lg text-center text-gray-600 text-xs md:text-base lg:text-xl"
 				>
 					Nos especializamos en generar impacto en el retail a través
 					de soluciones creativas dentro de puntos de venta.
 				</div>
 			</div>
 		</section>
-		<section id="about-us" class="h-screen"></section>
-		<section id="talent" class="h-screen">
+		<section id="about-us" class="h-screen">
+			<div
+				class="flex flex-col items-center justify-center h-full max-w-4xl mx-auto text-center"
+			>
+				<div class="flex flex-col items-center justify-center">
+					<p class="underline-offset-4 underline font-bold">
+						Acerca de Nosotros
+					</p>
+					<div
+						class="p-4 font-semibold text-xs sm:text-xl lg:text-3xl uppercase flex flex-col gap-2"
+					>
+						<p>Nuestra misión es transformar ideas en</p>
+						<p>realidades exitosas, priorizando resultados</p>
+						<p>
+							tangibles que impulsen el crecimiento y éxito de las
+						</p>
+						<p>
+							marcas en el punto de venta. Se destacan por crear
+						</p>
+						<p>
+							experiencias memorables que fortalecen la relación
+						</p>
+						<p>entre marcas y shoppers, generando resultados</p>
+						<p>medibles y duraderos en un mercado competitivo.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section
+			id="talent"
+			class="h-screen min-h-screen flex flex-col justify-between"
+		>
+			<div
+				class="text-center max-w-7xl flex flex-col items-center mx-auto md:mt-10 mt-3"
+			>
+				<p class="underline-offset-4 underline font-bold">
+					Nuestro Equipo
+				</p>
+				<p></p>
+			</div>
 			<Talent />
 		</section>
 		<section id="portfolio" class="h-screen">
