--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,187 +1,26 @@
 ---
 import "@/styles/globals.css";
 import Layout from "@/layouts/Layout.astro";
+import Hero from "@/components/Hero.astro";
 import Grid from "@/components/Grid.astro";
 import Talent from "@/components/Talent.astro";
-import { Image } from "astro:assets";
-import { Picture } from "astro:assets";
-
-import alquipop from "@/images/alquipop-logo.svg";
-import concept from "@/images/concept.png";
-import render from "@/images/render.png";
-import explosivo from "@/images/explosivo.png";
-import prototipo from "@/images/prototipo.png";
+import Process from "@/components/Process.astro";
+import AboutUs from "@/components/AboutUs.astro";
 ---
 
 <Layout title="Alquipop">
 	<main>
 		<section class="h-screen w-full flex flex-col">
-			<nav class="flex justify-between font-bold p-4 w-full">
-				<div class="flex items-center gap-2 font-bold text-xl h-fit">
-					<Image
-						src={alquipop}
-						alt="Alquipop logo"
-						class="w-12"
-						loading="eager"
-					/>
-					<p>Alquipop</p>
-				</div>
-				<div class="flex-col gap-1 hidden md:flex">
-					<a
-						href="#about-us"
-						class="transition-colors duration-300 ease-in-out hover:text-gray-600 scroll-smooth"
-						>Sobre Nosotros</a
-					>
-					<a
-						href="#talent"
-						class="transition-colors duration-300 ease-in-out hover:text-gray-600 scroll-smooth"
-						>Talento</a
-					>
-					<a
-						href="#portfolio"
-						class="transition-colors duration-300 ease-in-out hover:text-gray-600 scroll-smooth"
-						>Portafolio</a
-					>
-				</div>
-				<a
-					href="#contact"
-					class="bg-black text-white w-fit h-fit p-2 px-4 rounded-full"
-					>Contáctanos</a
-				>
-			</nav>
-			<div
-				class="flex-1 font-extrabold xl:text-[200px] md:text-[100px] text-[50px] flex items-center flex-col justify-center"
-			>
-				<div class="h-fit">
-					<span class="text-[#ff9300]">ALQUI</span>POP
-				</div>
-				<idv class="xl:text-[80px] md:text-[40px] text-xl">
-					- TRADE MARKETING AGENCY -
-				</idv>
-			</div>
-			<div class="pb-10 w-full flex justify-center">
-				<div
-					class="max-w-lg text-center text-gray-600 text-xs md:text-base lg:text-xl"
-				>
-					Nos especializamos en generar impacto en el retail a través
-					de soluciones creativas dentro de puntos de venta.
-				</div>
-			</div>
+			<Hero />
 		</section>
 		<section id="about-us" class="h-screen">
-			<div
-				class="flex flex-col items-center justify-center h-full max-w-4xl mx-auto text-center"
-			>
-				<div class="flex flex-col items-center justify-center">
-					<p class="underline-offset-4 underline font-bold">
-						Acerca de Nosotros
-					</p>
-					<div
-						class="p-4 font-semibold text-xs sm:text-xl lg:text-3xl uppercase flex flex-col gap-2"
-					>
-						<p>Nuestra misión es transformar ideas en</p>
-						<p>realidades exitosas, priorizando resultados</p>
-						<p>
-							tangibles que impulsen el crecimiento y éxito de las
-						</p>
-						<p>
-							marcas en el punto de venta. Se destacan por crear
-						</p>
-						<p>
-							experiencias memorables que fortalecen la relación
-						</p>
-						<p>entre marcas y shoppers, generando resultados</p>
-						<p>medibles y duraderos en un mercado competitivo.</p>
-					</div>
-				</div>
-			</div>
+			<AboutUs />
 		</section>
 		<section
 			id="process"
 			class="h-screen bg-black flex flex-col items-center justify-center font-bold relative"
 		>
-			<div class="underline-offset-4 underline text-lg p-4 text-gray-200">
-				De la idea a la ejecución
-			</div>
-			<div
-				class="flex flex-col items-center justify-center gap-10 uppercase text-gray-600 md:text-5xl text-xl p-4 z-10"
-			>
-				<div
-					class="hover:text-gray-200 transition-colors duration-300 cursor-default"
-				>
-					Brief
-				</div>
-				<div
-					class="hover:text-gray-200 transition-colors duration-300 cursor-default"
-				>
-					Concepto
-				</div>
-				<div
-					class="hover:text-gray-200 transition-colors duration-300 cursor-default"
-				>
-					Render Inicial
-				</div>
-				<div
-					class="hover:text-gray-200 transition-colors duration-300 cursor-default"
-				>
-					Explosivo
-				</div>
-				<div
-					class="hover:text-gray-200 transition-colors duration-300 cursor-default"
-				>
-					Gráficos
-				</div>
-				<div
-					class="hover:text-gray-200 transition-colors duration-300 cursor-default"
-				>
-					Prototipo / Instructivo
-				</div>
-				<div
-					class="hover:text-gray-200 transition-colors duration-300 cursor-default"
-				>
-					Entrevista de satisfacción
-				</div>
-			</div>
-			<div
-				class="top-0 left-1/4 -translate-x-1/2 execution-image-container"
-			>
-				<Image
-					src={concept}
-					alt="concepto de diseño"
-					decoding="async"
-					loading="lazy"
-					class="execution-image"
-				/>
-			</div>
-			<div
-				class="right-0 -translate-y-1/2 execution-image-container top-1/3"
-			>
-				<Image
-					src={render}
-					alt="render de diseño"
-					decoding="async"
-					loading="lazy"
-					class="execution-image"
-				/>
-			</div>
-			<div class="right-[10%] execution-image-container bottom-0">
-				<Image
-					src={explosivo}
-					alt="explosivo"
-					decoding="async"
-					loading="lazy"
-					class="execution-image"
-				/>
-			</div>
-			<div class="left-0 execution-image-container bottom-[15%]">
-				<Image
-					src={prototipo}
-					alt="gráficos"
-					decoding="async"
-					loading="lazy"
-					class="execution-image"
-				/>
-			</div>
+			<Process />
 		</section>
 		<section
 			id="talent"
