--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -5,10 +5,11 @@ import concept from "@/images/concept.png";
 import render from "@/images/render.png";
 import explosivo from "@/images/explosivo.png";
 import prototipo from "@/images/prototipo.png";
+import SectionTitle from "./SectionTitle.astro";
 ---
 
-<div class="underline-offset-4 underline text-lg p-4 text-gray-200">
-	De la idea a la ejecución
+<div class="text-gray-200">
+	<SectionTitle title="De la idea a la ejecución" />
 </div>
 <div
 	class="flex flex-col items-center justify-center gap-10 uppercase text-gray-600 md:text-5xl text-xl p-4 z-10"
