--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,18 +24,6 @@ import SectionTitle from "@/components/SectionTitle.astro";
 		>
 			<Process />
 		</section>
-		<section
-			id="talent"
-			class="h-screen min-h-screen flex flex-col justify-between"
-		>
-			<div
-				class="text-center max-w-7xl flex flex-col items-center mx-auto md:mt-10 mt-3"
-			>
-				<SectionTitle title="Nuestro Equipo" />
-				<p></p>
-			</div>
-			<Talent />
-		</section>
 		<section id="portfolio" class="h-screen flex flex-col justify-around">
 			<div>
 				<div
@@ -53,7 +41,7 @@ import SectionTitle from "@/components/SectionTitle.astro";
 				<Grid />
 			</div>
 		</section>
-		<section id="contact" class="h-screen bg-black">
+		<section id="contact" class="h-screen">
 			<Contact />
 		</section>
 	</main>
