--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,27 +1,54 @@
 ---
-import SectionTitle from "./SectionTitle.astro";
+import { Image } from "astro:assets";
+import alquipop from "@/images/alquipop-logo.svg";
+import linkedin from "@/images/icon_Linkedin.png";
+import instagram from "@/images/icon_Instagram.png";
 ---
 
-<div class="text-gray-200 flex flex-col items-center justify-center h-full">
-	<SectionTitle title="Ponte en contacto" />
-	<div class="flex">
-		<div class="uppercase">Slogan</div>
-		<div>
-			<div>Ciudad de México</div>
-			<div>
-				Av. Cervantes Saavedra 233
-				<br />
-				Col. Granada, Miguel Hidalgo,
-				<br />
-				Ciudad de México 11520
-				<br />
-				+52 55 1253 7000
-			</div>
-			<a href="">Veelo en el mapa</a>
+<div class="flex flex-col items-center justify-center h-full">
+	<div class="flex flex-col md:grid grid-cols-2 h-3/4 p-4 w-4/5 relative">
+		<div class="absolute -bottom-10 w-full md:flex justify-center hidden">
+			<Image
+				src={alquipop}
+				alt="Alquipop logo"
+				class="w-28"
+				loading="eager"
+			/>
 		</div>
-		<div>
-			<div>Contactanos</div>
-			<form action="" method="post" class="flex flex-col">
+		<div
+			class="bg-white p-12 md:text-2xl flex flex-col justify-between gap-4"
+		>
+			<div class="flex flex-col md:gap-8 w-3/4">
+				<div class="font-bold">Dirección:</div>
+				<div class="underline">
+					C. Lago Zurich 245, Col-Piso 7, Amp Granada, Miguel Hidalgo,
+					11529 Ciudad de México, CDMX, México.
+				</div>
+				<div class="font-bold">Teléfono:</div>
+				<div>+52 55 1253 7000</div>
+			</div>
+			<div class="flex gap-5">
+				<a href="" class="z-10">
+					<Image
+						src={linkedin}
+						alt="linkedin"
+						class="w-14"
+						loading="eager"
+					/>
+				</a>
+				<a href="" class="z-10">
+					<Image
+						src={instagram}
+						alt="instagram"
+						class="w-14"
+						loading="eager"
+					/>
+				</a>
+			</div>
+		</div>
+		<div class="p-12 md:text-2xl flex flex-col gap-8">
+			<div class="font-bold">Contáctanos:</div>
+			<form action="" method="post" class="flex-col hidden">
 				<input type="text" name="name" id="name" placeholder="Nombre" />
 				<input
 					type="email"
