--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,11 +20,14 @@ import SectionTitle from "@/components/SectionTitle.astro";
 		</section>
 		<section
 			id="process"
-			class="h-screen bg-black flex flex-col items-center justify-center font-bold relative"
+			class="h-screen flex flex-col items-center justify-center font-bold relative"
 		>
 			<Process />
 		</section>
-		<section id="portfolio" class="h-screen flex flex-col justify-around">
+		<section
+			id="portfolio"
+			class="min-h-screen flex flex-col justify-around"
+		>
 			<div>
 				<div
 					class="text-center max-w-7xl flex flex-col items-center mx-auto md:mt-10 mt-3"
@@ -41,7 +44,7 @@ import SectionTitle from "@/components/SectionTitle.astro";
 				<Grid />
 			</div>
 		</section>
-		<section id="contact" class="h-screen">
+		<section id="contact" class="md:h-screen">
 			<Contact />
 		</section>
 	</main>
