fix build flags

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from "astro:assets";
 import alquipop from "@/images/alquipop-logo.svg";
-import linkedin from "@/images/icon_Linkedin.png";
-import instagram from "@/images/icon_Instagram.png";
+import linkedin from "@/images/icon-linkedin.png";
+import instagram from "@/images/icon-instagram.png";
 ---
 
 <div class="flex flex-col items-center justify-center h-full">
