--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,9 +20,9 @@ import alquipop from "@/images/alquipop-logo.svg";
 			>Sobre Nosotros</a
 		>
 		<a
-			href="#portfolio"
+			href="#process"
 			class="transition-colors duration-300 ease-in-out hover:text-gray-600 scroll-smooth"
-			>Portafolio</a
+			>Nuestro Proceso</a
 		>
 	</div>
 	<a
