--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -5,7 +5,7 @@ import process from "@/images/graphic-process.png";
 ---
 
 <div
-	class="p-2 md:p-8 font-normal flex flex-col md:gap-16 gap-6 justify-center"
+	class="p-2 md:p-8 font-normal flex flex-col md:gap-16 gap-6 justify-around md:justify-center items-center min-h-screen"
 >
 	<div class="text-xl md:text-7xl">
 		De la idea a <span class="font-bold">la ejecución</span>
