--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,23 +17,10 @@ import SectionTitle from "@/components/SectionTitle.astro";
 		<section id="about-us" class="h-screen">
 			<AboutUs />
 		</section>
-		<section
-			id="process"
-			class="h-screen flex flex-col items-center justify-center font-bold relative"
-		>
+		<section id="process" class="min-h-screen">
 			<Process />
 		</section>
-		<section
-			id="portfolio"
-			class="min-h-screen flex flex-col justify-around"
-		>
-			<div>
-				<div
-					class="text-center max-w-7xl flex flex-col items-center mx-auto md:mt-10 mt-3"
-				>
-					<SectionTitle title="Nuestros Proyectos" />
-				</div>
-			</div>
+		<section id="portfolio" class="flex flex-col justify-around">
 			<div>
 				<div
 					class="text-center max-w-7xl flex flex-col items-center mx-auto md:mt-10 mt-3"
